lists/failed/genefilter
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''genefilter'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-09 r85796)
Installing package(s) 'genefilter'
also installing the dependencies ‘widgetTools’, ‘DynDoc’, ‘tkWidgets’, ‘ALL’, ‘ROC’, ‘RColorBrewer’

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/widgetTools_1.81.0.tar.gz'
Content type 'application/x-gzip' length 125881 bytes (122 KB)
==================================================
downloaded 122 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/DynDoc_1.81.0.tar.gz'
Content type 'application/x-gzip' length 11251 bytes (10 KB)
==================================================
downloaded 10 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/tkWidgets_1.81.0.tar.gz'
Content type 'application/x-gzip' length 339748 bytes (331 KB)
==================================================
downloaded 331 KB

trying URL 'https://bioconductor.org/packages/3.19/data/experiment/src/contrib/ALL_1.45.0.tar.gz'
Content type 'application/x-gzip' length 11383360 bytes (10.9 MB)
==================================================
downloaded 10.9 MB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/ROC_1.79.0.tar.gz'
Content type 'application/x-gzip' length 255593 bytes (249 KB)
==================================================
downloaded 249 KB

trying URL 'https://cloud.r-project.org/src/contrib/RColorBrewer_1.1-3.tar.gz'
Content type 'application/x-gzip' length 11638 bytes (11 KB)
==================================================
downloaded 11 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/genefilter_1.85.0.tar.gz'
Content type 'application/x-gzip' length 993784 bytes (970 KB)
==================================================
downloaded 970 KB

* installing *source* package ‘widgetTools’ ...
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
Warning message:
no DISPLAY variable so Tk is not available 
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
Warning: no DISPLAY variable so Tk is not available
** testing if installed package can be loaded from final location
Warning: no DISPLAY variable so Tk is not available
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘widgetTools’ as ‘widgetTools_1.81.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (widgetTools)
* installing *source* package ‘DynDoc’ ...
** using staged installation
** R
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘DynDoc’ as ‘DynDoc_1.81.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (DynDoc)
* installing *source* package ‘ALL’ ...
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘ALL’ as ‘ALL_1.45.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (ALL)
* installing *source* package ‘ROC’ ...
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c ROC.cc -o ROC.o
g++ -std=gnu++17 -shared -L/usr/local/lib/R/lib -L/usr/local/lib -o ROC.so ROC.o -L/usr/local/lib/R/lib -lR
installing to /tmp/tmp/built/00LOCK-ROC/00new/ROC/libs
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** checking absolute paths in shared objects and dynamic libraries
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘ROC’ as ‘ROC_1.79.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (ROC)
* installing *source* package ‘RColorBrewer’ ...
** package ‘RColorBrewer’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘RColorBrewer’ as ‘RColorBrewer_1.1-3_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (RColorBrewer)
* installing *source* package ‘genefilter’ ...
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
using Fortran compiler: ‘GNU Fortran (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c half_range_mode.cpp -o half_range_mode.o
half_range_mode.cpp: In function ‘double half_range_mode(double*, double*, double, int)’:
half_range_mode.cpp:100:60: warning: format ‘%i’ expects argument of type ‘int’, but argument 5 has type ‘std::vector<int>::size_type’ {aka ‘long unsigned int’} [-Wformat=]
  100 |     if (diag) Rprintf( "N = %i, N'' = %i, w = %.4f, |J| = %i\n", N, N_double_prime, w, J.size() );
      |                                                           ~^                           ~~~~~~~~
      |                                                            |                                 |
      |                                                            int                               std::vector<int>::size_type {aka long unsigned int}
      |                                                           %li
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c init.c -o init.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c nd.c -o nd.o
nd.c: In function ‘detectTies’:
nd.c:75:21: error: format not a string literal and no format arguments [-Werror=format-security]
   75 |             warning(msg_buf);
      |                     ^~~~~~~
cc1: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:191: nd.o] Error 1
ERROR: compilation failed for package ‘genefilter’
* removing ‘/tmp/tmp/built/genefilter’
* installing *source* package ‘tkWidgets’ ...
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
Warning message:
no DISPLAY variable so Tk is not available 
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
Warning: no DISPLAY variable so Tk is not available
** testing if installed package can be loaded from final location
Warning: no DISPLAY variable so Tk is not available
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘tkWidgets’ as ‘tkWidgets_1.81.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (tkWidgets)

The downloaded source packages are in
	‘/tmp/RtmpSbz6pd/downloaded_packages’
Old packages: 'pkgload', 'withr'
Warning message:
In install.packages(...) :
  installation of package ‘genefilter’ had non-zero exit status

real	0m20.642s
user	0m12.454s
sys	0m5.183s
